--- a/pom.xml
+++ b/pom.xml
@@ -123,7 +123,7 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
-                            <finalName>duplicatesFinder</finalName>
+                            <finalName>finder</finalName>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>ru.job4j.io.duplicates.DuplicatesFinder</mainClass>
